# FP

./: .gitignore  CMakeLists.txt  LICENSE  LPSolver.cpp  LPSolver.h  README.txt  callgrind.out.40b  combined_results.xlsx  combined_results2.xlsx  excel.ipynb  functions.cpp  functions.h  graph.cpp  graph.h  graph.txt  heiCross.tgz  io.cpp  io.h  main.cpp  mainarg.cpp  output.txt  output2.txt  performance.cpp  performance.h  reductions.cpp  reductions.h  run.sh  solution.sol  stack.cpp  stack.h  test_graph.txt  test_tomalv.sh  verify.ipynb  visualize.ipynb
KaMIS/kernel/: branch_and_reduce_algorithm.h  reductions.cpp  reductions.h
TomAlv/: heuristic_algorithm.h  heuristic_graph.h
bipartitegraphs/: 4000_4_40_5.4.gr  complete.gr  small1.gr  small2.gr  small3.gr  small4.gr  test1.gr  test2.gr  test3.gr  test4.gr  test5.gr  test6.gr  test7.gr
callgrind/: callgrind.out.1gr  callgrind.out.40a  callgrind.out.40b  callgrind.out.40c  callgrind.out.40gr  callgrind.out.new0  callgrind.out.new2
heiCross/: heiCross
hypergraphs/: 4000_4_40_5.12.hgr  4000_4_40_5.23.hgr  4000_4_40_5.33.hgr  4000_4_40_5.38.hgr  4000_4_40_5.39.hgr  4000_4_40_5.4.hgr  8000_4_40_5.15.hgr  8000_4_40_5.16.hgr  8000_4_40_5.17.hgr  8000_4_40_5.20.hgr  8000_4_40_5.3.hgr
performance_data/: 1  2  3  4  5
src/: branchandreduce.cpp  branchandreduce.h  graph.cpp  graph.h  io.cpp  performance.cpp  performance.h  reductions.cpp  reductions.h  stack.cpp  stack.h
src_henning/data/test/: faulty.gr
src_henning/src/: bit_array.h  candidate_manager.h  cross_matrix.h  definitions.h  edge.cpp  edge.h  exhaustive_solver.h  front_back_reducer.h  graph_hen.h  macros.h  misc.cpp  misc.h  one_vertex_partition_manager.h  one_vertex_partitioner.h  partitioner.h  perfect_pattern.h  solver.h  solver_bf.h  translation_table.h  twin_reducer.h  useless_reducer.h
src_tomalv/: heuristic_algorithm.h  median_algorithm.h
